# showcase-3d-printer-anomaly-counter

./: .bumpversion.cfg  .gitignore  README.md  build.sh  project.toml  pyproject.toml
.github/workflows/: ci.yaml
github/workflows/: release.yaml
showcase_3d_printer_anomaly_counter/: request.py  runner.py
showcase_3d_printer_anomaly_counter/eventhandler/: EventHandler.py  request.py
showcase_3d_printer_anomaly_counter/infrastructure/: KafkaEventConsumer.py  KafkaEventProducer.py
tests/: test_showcase_3d_printer_anomaly_counter.py
